Work more on web app

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdluu3_9aB-A183_b3D1DGp4P4Y9Rq0Rs&callback=myMap" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Task About Datasets</h1>
+    
+    <div id="googleMap"></div>
 </body>
 </html>
