Started adding custom form

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <h1>Task About Datasets</h1>
-    
-    <div id="map"></div>
+    <div id="GUI">
+        <div id="map"></div>
+        <form action="">
+            <label for="LineNum">Line Number:</label> <br>
+            <input type="number" name="LineNum" id="LineNum">
+        </form>
+    </div>
 </body>
 </html>
