Improved filter option

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,11 @@
     <h1>Task About Datasets</h1>
     <div id="GUI">
         <div id="map"></div>
-        <form action="">
+        <form id="customForm">
+            <h2>Filter</h2>
             <label for="LineNum">Line Number:</label> <br>
-            <input type="number" name="LineNum" id="LineNum">
+            <input type="text" name="LineNum" id="LineNum">
+            <br><br>
         </form>
     </div>
 </body>
