--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 
     
-    <script src="index.js" defer></script>
+    <script src="index.js" type="module" defer></script>
     <script defer>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({key: "AIzaSyCdluu3_9aB-A183_b3D1DGp4P4Y9Rq0Rs", v: "weekly"});</script>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="loader"><p>Loading Dataset</p></div>
     <h1>Task About Datasets</h1>
     <div id="GUI">
         <div id="map"></div>
