added in route and out of route filters

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
             <label for="LineNum">Line Number:</label> <br>
             <input type="text" name="LineNum" id="LineNum">
             <br><br>
+            <label for="showInRoute">In-route</label>
+            <input type="checkbox" name="showInRoute" id="showInRoute" checked>
+            <br><br>
+            <label for="showOutRoute">Out of route</label>
+            <input type="checkbox" name="showOutRoute" id="showOutRoute">
+            <br><br>
+            <input type="submit" value="Apply Filter">
         </form>
     </div>
 </body>
